--- a/scss/tienda.scss
+++ b/scss/tienda.scss
@@ -1,19 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Koulen&family=Poppins:wght@200&family=Roboto+Mono:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
-/* fonts*/
-
 @import './base/variables';
+
+@import './base/mixins';
+
+@import './base/extends';
+
+/*resets style , fonts y background body*/
 @import './partials/generales';
-@import './partials/body';
-@import './partials/header';
-@import './partials/homeIcon';
-@import './partials/banner';
-@import './partials/mainHome';
-@import './partials/carousel';
-@import './partials/titleReferencia';
-@import './partials/titleProduct';
-@import './partials/form';
-@import './partials/footer';
+/*background img, y icon home*/
+@import './partials/headerStyle/header';
+/*banner y reference title*/
+@import './partials/bannersTodos/bannerTitle';
+/*estilos de index y foto */
+@import './partials/indexEstilos/mainHome';
+/*estilos para bts carrousel*/
+@import './partials/btsCarrousels/carousel';
+/*estilos para imagen de carrousels*/
+@import './partials/btsCarrousels/fotos';
+/*estilos de secciones de productos de todos los html*/
+@import'./partials/productosTodos/ProductosAll';
+/*estilo de los titulos de productos*/
+@import './partials/titulosProductos/titleProduct';
+/*estilos del formulario*/
+@import './partials/formulario/form';
+/*estilos del footer*/
+@import './partials/redesFooter/footer';
 
 
 
