--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -3,7 +3,10 @@ $black: #000;
 $fondo: #f8f9fa;
 $fontCopy: 'Poppins', sans-serif;
 $fontProduct: 'Koulen', cursive;
-$fontText: 'Roboto Mono', monospace;
-$border:#5a189a;
-$shadow:#7b2cbf;
-$textShadow:rgb(187, 6, 253);
+$fontText:'Raleway', sans-serif;
+
+$colores:(
+    "border":#5a189a,
+    "shadow":#7b2cbf,
+    "textShadow":rgb(187, 6, 253)
+)
