--- a/scss/partials/_generales.scss
+++ b/scss/partials/_generales.scss
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Koulen&family=Poppins:wght@200&family=Roboto+Mono:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     font-size: 16px;
+}
+
+body{
+    background: #dee2e6;
 }
