--- a/scss/partials/titulosProductos/_titleProduct.scss
+++ b/scss/partials/titulosProductos/_titleProduct.scss
@@ -2,11 +2,10 @@
 
 .titleProduct-global{
     margin: 60px;
-    border-radius: 40px;
-    color: $black;
-    text-shadow: 0 5px 8px $textShadow,0 5px 8px $textShadow;
     font-size: 2rem;
     text-align: center;
+    @extend .title-style;
+    
     @media(min-width:768px){
             font-size:3rem;
     }
