--- a/css/tienda.css
+++ b/css/tienda.css
@@ -8,12 +8,10 @@
   box-shadow: 0 1px 15px #7b2cbf; }
 
 .title-style, .titleProduct-global {
-  border-radius: 40px;
   color: #000;
-  font-family: "Kdam Thmor Pro", sans-serif;
-  text-shadow: 0 5px 8px #bb06fd; }
+  font-family: "Kdam Thmor Pro", sans-serif; }
 
-/*resets style , fonts y background body*/
+/*reset de  estilos , fonts y body*/
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +20,7 @@
 body {
   background: #dee2e6; }
 
-/*background img, y icon home*/
+/*background img, y icono para inicio*/
 .encabezado {
   background: url(../img/nav12.jpg);
   background-size: cover;
@@ -49,17 +47,21 @@ body {
     .encabezado {
       height: 40vh; } }
 
-.iconos {
-  margin: 0 10px;
-  width: 70px;
-  height: 68px;
-  border-radius: 50%;
-  border: 3px solid #000;
-  transition: transform .4s; }
-  .iconos:hover {
-    transform: scale(1.2); }
+.icono {
+  font-size: 2em;
+  font-family: "Kdam Thmor Pro", sans-serif;
+  text-decoration: none;
+  color: #7b2cbf;
+  text-shadow: 1px 2px 5px;
+  transition: all .2s; }
+  .icono:hover {
+    transform: scale(1.1);
+    padding: 5px;
+    margin: 5px;
+    color: #7b2cbf;
+    text-shadow: 1px 2px 2px #000; }
 
-/*banner y reference title*/
+/*banner y referencias de seccion donde estas*/
 .global-banner {
   margin: 15px;
   display: flex;
@@ -76,7 +78,9 @@ body {
   .global-banner .global-foto {
     width: 100%;
     height: 20vh;
-    border-radius: 20%; }
+    border-radius: 20%;
+    border: 3px solid #5a189a;
+    box-shadow: 0 2px 20px #7b2cbf; }
     @media (min-width: 768px) {
       .global-banner .global-foto {
         width: 100%;
@@ -84,12 +88,14 @@ body {
     @media (min-width: 1024px) {
       .global-banner .global-foto {
         width: 100%;
-        height: 50vh; } }
+        height: 60vh; } }
 
 .global-title {
   margin: 40px;
   font-size: 2rem;
   font-family: "Koulen", cursive;
+  border: 3px solid #5a189a;
+  box-shadow: 0 2px 20px #7b2cbf;
   background: #f8f9fa;
   text-shadow: 2px 2px 6px #000;
   text-align: center;
@@ -105,10 +111,12 @@ body {
       font-size: 5rem;
       text-shadow: 2px 2px 6px #000; } }
 
-/*estilos de index y foto */
+/*estilos de info nosotros y foto referencia */
 .info {
   background: #f8f9fa;
   margin: 15px;
+  border: 3px solid #5a189a;
+  box-shadow: 0 2px 20px #7b2cbf;
   border-radius: 30px;
   display: flex;
   justify-content: center;
@@ -134,7 +142,8 @@ body {
     transition: all .5s; }
     .info .nosotros:hover {
       transform: scale(1.1);
-      font-size: 1.4rem; }
+      font-size: 1.4rem;
+      margin: 30px; }
   .info .foto-referencia {
     width: 90%;
     height: 25vh;
@@ -167,18 +176,20 @@ body {
 .caro {
   margin: 15px;
   padding: 30px;
-  border-radius: 40px;
-  background: #f8f9fa; }
+  border-radius: 15px;
+  background: #f8f9fa;
+  border: 3px solid #5a189a;
+  box-shadow: 0 2px 20px #7b2cbf; }
   @media (min-width: 768px) {
     .caro {
       margin: 15px;
       padding: 30px;
-      border-radius: 40px; } }
+      border-radius: 20px; } }
   @media (min-width: 1024px) {
     .caro {
-      margin: 40px;
+      margin: 25px;
       padding: 30px;
-      border-radius: 40px; } }
+      border-radius: 25px; } }
 
 /*estilos para imagen de carrousels*/
 .ofoto {
@@ -198,24 +209,56 @@ body {
 .articulos-titulo {
   text-shadow: 2px 2px 3px #000;
   text-align: center;
-  font-size: 3rem;
+  border-radius: 12px;
+  border-top: 3px solid #5a189a;
+  border-bottom: 3px solid #5a189a;
+  font-size: 1.7rem;
   font-family: "Kdam Thmor Pro", sans-serif; }
+  @media screen and (min-width: 768px) {
+    .articulos-titulo {
+      font-size: 2.4rem; } }
+  @media screen and (min-width: 1024px) {
+    .articulos-titulo {
+      font-size: 3rem; } }
 
 .contenido-container {
   display: grid;
   grid-template-columns: 1fr;
   gap: 7px;
   padding: 10px; }
-  .contenido-container .prod-foto {
-    width: 100%;
-    height: 50vh;
-    object-fit: cover; }
+  .contenido-container .card-product {
+    padding: 20px;
+    border: 3px solid #5a189a;
+    box-shadow: 0 2px 7px #7b2cbf;
+    border-radius: 13px; }
+    .contenido-container .card-product .prod-foto {
+      width: 100%;
+      height: 20vh; }
+      @media screen and (min-width: 768px) {
+        .contenido-container .card-product .prod-foto {
+          width: 100%;
+          height: 30vh; } }
+      @media screen and (min-width: 1024px) {
+        .contenido-container .card-product .prod-foto {
+          height: 30vh;
+          object-fit: cover; } }
+    .contenido-container .card-product .boton {
+      margin-top: 10px; }
+      .contenido-container .card-product .boton .buy {
+        padding: 0 10px;
+        text-decoration: none;
+        color: #000;
+        font-family: "Kdam Thmor Pro", sans-serif;
+        border: 3px solid #5a189a;
+        box-shadow: 0 2px 20px #7b2cbf;
+        border-radius: 10px; }
   @media screen and (min-width: 768px) {
     .contenido-container {
       grid-template-columns: repeat(2, 1fr); } }
   @media screen and (min-width: 1024px) {
     .contenido-container {
-      grid-template-columns: repeat(2, 1fr); } }
+      grid-template-columns: repeat(3, 1fr);
+      gap: 10px; } }
 
 .valorant-container {
   display: grid;
@@ -248,19 +291,25 @@ body {
 .titleProduct-global {
   margin: 60px;
   font-size: 2rem;
-  text-align: center; }
+  text-align: center;
+  border-radius: 12px;
+  border-top: 3px solid #5a189a;
+  border-bottom: 3px solid #5a189a; }
   @media (min-width: 768px) {
     .titleProduct-global {
       font-size: 3rem; } }
   @media (min-width: 1024px) {
     .titleProduct-global {
-      font-size: 4rem; } }
+      font-size: 3.5rem; } }
 
-/*estilos del formulario*/
+/*estilos formulario*/
 .orders {
-  background: #f8f9fa;
+  background: url(../../../img/form.webp);
   margin: 40px;
   padding: 40px;
+  border-radius: 30px;
+  border: 3px solid #5a189a;
+  box-shadow: 0 2px 20px #7b2cbf;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -271,8 +320,14 @@ body {
     padding: .4rem; }
     .orders .input-order::placeholder {
       font-family: 'Poppins', sans-serif; }
+    .orders .input-order .colu {
+      display: flex;
+      flex-direction: column; }
   .orders .labeli {
-    margin-top: 10px; }
+    margin-top: 10px;
+    text-align: center;
+    display: flex;
+    flex-direction: column; }
   .orders .border {
     outline: none;
     box-shadow: 0 1px 20px #7b2cbf;
@@ -295,25 +350,27 @@ body {
     padding: 5px;
     margin: 5px; }
 
-/*estilos del footer*/
+/*estilos footer*/
 footer {
   height: 20vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background: #f8f9fa; }
+  background: #f8f9fa;
+  border-top: 3px solid #5a189a; }
+  footer .deco {
+    text-decoration: none; }
+  footer .copyr {
+    text-align: center;
+    font-size: .9rem;
+    font-family: "Raleway", sans-serif; }
+    @media (min-width: 768px) {
+      footer .copyr {
+        font-size: 1.5rem; } }
+    @media (min-width: 1280px) {
+      footer .copyr {
+        font-size: 1.7rem; } }
 
 .social-container .ig {
   width: 48px;
   height: 48px; }
-
-.copyr {
-  text-align: center;
-  font-size: .9rem;
-  font-family: "Raleway", sans-serif; }
-  @media (min-width: 768px) {
-    .copyr {
-      font-size: 1.5rem; } }
-  @media (min-width: 1280px) {
-    .copyr {
-      font-size: 1.7rem; } }
