--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -8,5 +8,7 @@ $fontText:'Raleway', sans-serif;
 $colores:(
     "border":#5a189a,
     "shadow":#7b2cbf,
-    "textShadow":rgb(187, 6, 253)
+    "textShadow":rgb(187, 6, 253),
+    "bodyColor": #dee2e6,
+    "textColor": #000
 )
