--- a/scss/partials/bannersTodos/_bannerTitle.scss
+++ b/scss/partials/bannersTodos/_bannerTitle.scss
@@ -1,4 +1,4 @@
-@import '../base/variables';
+
 
 .global-banner{
     margin: 15px;
@@ -14,6 +14,8 @@
     width: 100%;
     height: 20vh;
     border-radius: 20%;
+    @include borderBoxshadow ();
+    
 
      @media(min-width:768px){ 
         width: 100%;
@@ -21,7 +23,8 @@
     }
      @media(min-width:1024px){
             width: 100%;
-            height: 50vh;
+            height: 60vh;
+            
     }
   } 
 }
@@ -30,9 +33,10 @@
   margin: 40px;
   font-size: 2rem;
   font-family: $fontProduct;
+  @include borderBoxshadow();
   background: $fondo;
   text-shadow: 2px 2px 6px $black;
-  text-align: center;
+  @include txtCenter;
   border-radius: 50px;
   
 
