--- a/scss/partials/headerStyle/_header.scss
+++ b/scss/partials/headerStyle/_header.scss
@@ -31,15 +31,19 @@
 
 }
 
-.iconos{
-    margin: 0 10px;
-    width: 70px;
-    height: 68px;
-    border-radius: 50%;
-    border: 3px solid $black;
-    transition: transform .4s;
+.icono{
+    font-size: 2em;
+    font-family: $fontTitle;
+    text-decoration: none;
+    color: map-get($map: $colores, $key:"shadow");
+    text-shadow: 1px 2px 5px map-get($map: $colores, $key:"texshadow" );
+    transition: all .2s;
 
        &:hover{
-         transform: scale(1.2);
+         transform: scale(1.1);
+         padding: 5px;
+         margin: 5px;
+         color: map-get($map: $colores, $key:"shadow");
+         text-shadow: 1px 2px 2px map-get($map: $colores, $key:"textColor" );
     }
 }
