--- a/scss/partials/productosTodos/_ProductosAll.scss
+++ b/scss/partials/productosTodos/_ProductosAll.scss
@@ -2,9 +2,16 @@
 
 .articulos-titulo{
     text-shadow: 2px 2px 3px $black;
-    text-align: center;
-    font-size:3rem;
+    @include txtCenter;
+    @include bordeTopBotton;
+    font-size:1.7rem;
     font-family: $fontTitle;
+    @media screen and (min-width:768px) {
+      font-size: 2.4rem;
+    }
+    @media screen and (min-width:1024px) {
+      font-size: 3rem;
+    }
 }
 
 .contenido-container{
@@ -12,49 +19,85 @@
    grid-template-columns: 1fr;
    gap: 7px;
    padding: 10px;
-    .prod-foto{
-        width: 100%;
-        height: 50vh;
-        object-fit: cover;
-    }
-   @media screen and (min-width:768px) {
-     grid-template-columns: repeat(2,1fr);
-    }
-   @media screen and (min-width:1024px) {
-     grid-template-columns: repeat(2,1fr);
-     
-   }
+   
+    .card-product{
+          padding: 20px;
+          @include borderBoxshadow( 3px, 7px);
+          @include radius(13px);
+          
+           .prod-foto{
+              width: 100%;
+              height: 20vh;
+              
+
+              @media screen and (min-width:768px) {
+             
+                width: 100%;
+                height: 30vh;
+              }
+         
+              @media screen and (min-width:1024px) {
+            
+                height: 30vh;
+                object-fit: cover;
+              }
+                
+              
+           
+            }
+        .boton{
+          margin-top: 10px;
+
+           .buy{
+              padding: 0 10px;
+              text-decoration: none;
+              color: map-get($map: $colores, $key:"textColor" );
+              font-family: $fontTitle;
+              @include borderBoxshadow();
+              @include radius(10px);
+             
+             }  
+          }    
+        }
+      @media screen and (min-width:768px) {
+        grid-template-columns: repeat(2,1fr);
+       }
+
+     @media screen and (min-width:1024px) {
+        grid-template-columns: repeat(3,1fr);
+        gap: 10px;
+  
+      }  
 }
 
 .valorant-container{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3,1fr);
-    justify-items: center;
-        .valorantFoto{
-           width: 100%;
-           height: 50vh;
-           padding: 10px;
-           object-fit: contain;
-        
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3,1fr);
+  justify-items: center;
+      .valorantFoto{
+         width: 100%;
+         height: 50vh;
+         padding: 10px;
+         object-fit: contain;
+      
           @media (min-width:768px){
-                width: 100%;
-                height: 50vh;
-         }
+              width: 100%;
+              height: 50vh;
+           }
           @media (min-width:1024px){
-                width: 100%;
-                height: 50vh;   
-         }
-    }
-    @media screen and (min-width:768px) {
-        grid-template-columns: repeat(2,1fr);
-        grid-template-rows: repeat(2,1fr);
+              width: 100%;
+              height: 50vh;   
+           }
        }
-      @media screen and (min-width:1024px) {
-        grid-template-columns: repeat(3,1fr);
-        grid-template-rows: repeat(2,1fr);
-       
-        
+
+   @media screen and (min-width:768px) {
+      grid-template-columns: repeat(2,1fr);
+      grid-template-rows: repeat(2,1fr);
+     }
+    @media screen and (min-width:1024px) {
+      grid-template-columns: repeat(3,1fr);
+      grid-template-rows: repeat(2,1fr);
       }
-    
-}
+  
+  }
