--- a/scss/partials/redesFooter/_footer.scss
+++ b/scss/partials/redesFooter/_footer.scss
@@ -8,6 +8,22 @@ footer{
     justify-content: space-evenly;
     align-items: center;
     background: $fondo;
+    border-top: 3px solid map-get($map: $colores, $key: "border" );
+    .deco{
+        text-decoration: none;
+    }
+    .copyr{
+        @include txtCenter;
+        font-size: .9rem;
+        font-family: $fontText;
+        @media(min-width:768px){
+                font-size: 1.5rem;
+        }
+        @media(min-width:1280px){
+                font-size: 1.7rem;
+        }   
+    }
+    
 }
 
 .social-container{
@@ -19,17 +35,6 @@ footer{
     
 }
 
-.copyr{
-    text-align: center;
-    font-size: .9rem;
-    font-family: $fontText;
-    @media(min-width:768px){
-            font-size: 1.5rem;
-    }
-    @media(min-width:1280px){
-            font-size: 1.7rem;
-    }   
-}
 
 
 
