--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $fontProduct: 'Koulen', cursive;
 $fontText:'Raleway', sans-serif;
 
 $colores:(
+    "icono":#9d4edd,
     "border":#5a189a,
     "shadow":#7b2cbf,
     "textShadow":rgb(187, 6, 253),
