--- a/scss/partials/titulosProductos/_titleProduct.scss
+++ b/scss/partials/titulosProductos/_titleProduct.scss
@@ -1,6 +1,6 @@
 @import '../base/variables';
 
-.titleProduct-global{
+.tituloDeCarrousel{
     margin: 60px;
     font-size: 2rem;
     @include txtCenter;
