--- a/scss/partials/estilosDeProductos/_seccionDeProductos.scss
+++ b/scss/partials/estilosDeProductos/_seccionDeProductos.scss
@@ -24,7 +24,9 @@
           padding: 20px;
           @include borderBoxshadow( 3px, 7px);
           @include radius(13px);
-          
+          display: flex;
+          flex-direction: column;
+          align-items: center;
            .prod-foto{
               width: 100%;
               height: 20vh;
@@ -49,13 +51,20 @@
           margin-top: 10px;
 
            .buy{
-              padding: 0 10px;
+              
+              padding: 0 50px;
               text-decoration: none;
               color: map-get($map: $colores, $key:"textColor" );
               font-family: $fontTitle;
               @include borderBoxshadow();
               @include radius(10px);
-             
+
+                @media screen and (min-width:768px) {
+                   padding: 0 90px;
+                }
+                @media screen and(min-width:1024px) {
+                   padding: 0 90px;
+                }
              }  
           }    
         }
@@ -70,34 +79,3 @@
       }  
 }
 
-.valorant-container{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: repeat(3,1fr);
-  justify-items: center;
-      .valorantFoto{
-         width: 100%;
-         height: 50vh;
-         padding: 10px;
-         object-fit: contain;
-      
-          @media (min-width:768px){
-              width: 100%;
-              height: 50vh;
-           }
-          @media (min-width:1024px){
-              width: 100%;
-              height: 50vh;   
-           }
-       }
-
-   @media screen and (min-width:768px) {
-      grid-template-columns: repeat(2,1fr);
-      grid-template-rows: repeat(2,1fr);
-     }
-    @media screen and (min-width:1024px) {
-      grid-template-columns: repeat(3,1fr);
-      grid-template-rows: repeat(2,1fr);
-      }
-  
-  }
