--- a/scss/partials/headerStyle/_header.scss
+++ b/scss/partials/headerStyle/_header.scss
@@ -32,18 +32,16 @@
 }
 
 .icono{
-    font-size: 2em;
+     margin-right: 15px;
+    font-size: 2.2em;
     font-family: $fontTitle;
     text-decoration: none;
-    color: map-get($map: $colores, $key:"shadow");
-    text-shadow: 1px 2px 5px map-get($map: $colores, $key:"texshadow" );
-    transition: all .2s;
+    color: map-get($map: $colores, $key:"textColor");
+    text-shadow: 2px 2px 3px map-get($map: $colores, $key:"shadow" );
+    transition: all .1s;
 
        &:hover{
-         transform: scale(1.1);
-         padding: 5px;
-         margin: 5px;
-         color: map-get($map: $colores, $key:"shadow");
-         text-shadow: 1px 2px 2px map-get($map: $colores, $key:"textColor" );
+         color: map-get($map: $colores, $key:"textColor");
+         text-shadow: 2px 2px 5px map-get($map: $colores, $key:"shadow" );
     }
 }
