--- a/scss/partials/indexEstilos/_mainHome.scss
+++ b/scss/partials/indexEstilos/_mainHome.scss
@@ -16,7 +16,7 @@
        }
        .subtt{
         @include txtCenter;
-        font-size: 3rem;
+        font-size: 2.7rem;
         font-family: $fontTitle;
         text-shadow: 1px 3px 4px $black;
     }
@@ -25,7 +25,7 @@
         padding: 1.5rem;
         font-family: $fontText;
         font-size: 1.2rem;
-        transition: all .5s;
+        transition: all 1.5s;
         &:hover{
             transform: scale(1.1);
             font-size: 1.4rem;
